// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color #ab throws an error 1`] = `
"'color' must be a color (#RRGGBB or #RGB).

   Line | Content
 >    1 | color: #ab
"
`;

exports[`color #abcd throws an error 1`] = `
"'color' must be a color (#RRGGBB or #RGB).

   Line | Content
 >    1 | color: #abcd
"
`;

exports[`color #abcde throws an error 1`] = `
"'color' must be a color (#RRGGBB or #RGB).

   Line | Content
 >    1 | color: #abcde
"
`;

exports[`color #bcdefg throws an error 1`] = `
"'color' must be a color (#RRGGBB or #RGB).

   Line | Content
 >    1 | color: #bcdefg
"
`;
